# jax-bandits

./: .gitignore  README.md  pyproject.toml
dev/: dev.ipynb  jax.ipynb
notebooks/: example.ipynb  experiments.ipynb
src/bandits/: data.py  environment.py  policies.py  utils.py
src/bandits/policies/: epsilon_greedy.py  thomson_sampling.py  ucb.py
